@@ -51,7 +51,7 @@
             <a href="/users/profile" class="btn btn-outline-secondary">
               Edit Profile
             </a>
-            <form method="POST" action="/users/delete">
+            <form method="GET" action="/users/delete">
               {{ g.csrf_form.hidden_tag() }}
               <button class="btn btn-outline-danger ms-2">
                 Delete Profile
